# crypto_mth_proxy

./: .gitignore  Cargo.toml  build.rs  compare_binance_vs_kafka1.py  config.toml  period.proto
configs/: 01_ok_futures_bn_futures.toml  01_okex_futures_binance_futures.toml  02_binance_margin__binance_futures.toml  02_bn_margin_bn_futures.toml  03_binance_futures_binance_futures.toml  03_bn_futures_bn_futures.toml  04_ok_futures_ok_futures.toml
scripts/: deploy_dat_proxy.sh  deploy_mth_proxy.sh  pm2_log_set.sh  start_dat_proxy.sh  start_mth_proxy.sh  stop_dat_proxy.sh  stop_mth_proxy.sh  test_ipc_sub.py
src/: app.rs  config.rs  ipc.rs  kafka.rs  main.rs  period.rs  proto.rs  symbol.rs
