[package]
name = "crypto_mth_proxy"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "dat_proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
prost = "0.14.1"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
zmq = "0.10"

[build-dependencies]
prost-build = "0.14.1"
